**************
RECENT CHANGES
**************

======
1.78.1
======

* Fixed Issue #219 - db:import with no arguments throws PHP Warnings
* Support "~" in --root-path option
* sys:setup:run - Better error printing

======
1.78.0
======

* New database console helper
  with new functions (by Dmitriy Zavalkin):
  - mysqlUserHasPrivilege
  - getMysqlVariableValue

* Feature: #212 admin:user:create - allow assigning an existing role (by Alexander Menk)
* Fixed: Project configuration loader
* Fixed: LogicException thrown by script:repo:list where no script directories exist (by David Alger)
* Fixed issue #185 - Dont instantiate classes when checking inheritance (by Luke Rotherfield)

-----------------------------------------
SEE FULL CHANGELOG: http://bit.ly/10IDU1H
-----------------------------------------

Visit our new blog http://magerun.net