@@ -9,6 +9,7 @@ RECENT CHANGES
 * Fixed Issue #219 - db:import with no arguments throws PHP Warnings
 * Support "~" in --root-path option
 * sys:setup:run - Better error printing
+* Check edition for enterprise only commands. Hide in Magento CE.
 
 ======
 1.78.0
